# chromap-rs

./:  .gitignore  .gitmodules  Cargo.toml  README.md  SPLIT_ALIGNMENT_USAGE.md
chromap-rust/: Cargo.toml
chromap-rust/src/: lib.rs
chromap-sys/: Cargo.toml  build.rs  wrapper.cpp  wrapper.h
chromap-sys/src/: lib.rs
examples/: split_alignment_example.rs
